Improvements for species module

--- a/species/register.conf
+++ b/species/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Species
 MODULE_DESCRIPTION: Manage a database of information about species within a group, for example birds. Store common name, Latin name, a link to one or more free content images from Flickr, as well as imported text from Wikipedia where it exists.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: August 17, 2012, 2:22 pm
-MODULE_VERSION: 0.013
+MODULE_VERSION: 0.014
 MODULE_PATH: species
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -41,3 +41,5 @@ TEXT: mod_species_eolsound|Sound file via EOL|Sounds via EOL
 TEXT: mod_species_eolnosound|EOL has no sound|The Encyclopedia of Life (EOL) has no sound file for [-species-]. If you know of a freely accessible sound recording for this species, you can join EOL and provide a link to the sound file. If you have access to this species, you could record it and donate the recording to EOL.
 TEXT: mod_species_changegroup|Change organisms|Change organisms
 TEXT: mod_species_viewonflickr|View image on Flickr|View image on Flickr
+TEXT: mod_species_userspecies|Contributed images|Contributed images
+TEXT: mod_species_nousrfls|There are no user contributed files|There are no user contributed imges. You can contribute images to help cover more species. Just send a message to the site administrator.
