--- a/species/register.conf
+++ b/species/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Species
 MODULE_DESCRIPTION: Manage a database of information about species within a group, for example birds. Store common name, Latin name, a link to one or more free content images from Flickr, as well as imported text from Wikipedia where it exists.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: August 17, 2012, 2:22 pm
-MODULE_VERSION: 0.016
+MODULE_VERSION: 0.018
 MODULE_PATH: species
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -39,10 +39,12 @@ TEXT: mod_species_stub|Explains a stub|This article is a stub on Wikipedia. This
 TEXT: mod_species_eoltitle|Encyclopedia of Life results|Encyclopedia of Life results
 TEXT: mod_species_eolsound|Sound file via EOL|Sounds via EOL
 TEXT: mod_species_eolnosound|EOL has no sound|The Encyclopedia of Life (EOL) has no sound file for [-species-]. If you know of a freely accessible sound recording for this species, you can join EOL and provide a link to the sound file. If you have access to this species, you could record it and donate the recording to EOL.
+TEXT: mod_species_eolnoimg|EOL has no images|The Encyclopedia of Life (EOL) has no image files for [-species-]. You can join EOL and provide a link to a public image file, or you can add CC licensed images to the Encyclopedia of Life group on Flickr.  If you have access to this species, you could photograph it and donate the image to EOL, either directly or via its Flickr group.
 TEXT: mod_species_changegroup|Change organisms|Change organisms
 TEXT: mod_species_viewonflickr|View image on Flickr|View image on Flickr
 TEXT: mod_species_userspecies|Contributed images|Contributed images
 TEXT: mod_species_nousrfls|There are no user contributed files|There are no user contributed imges. You can contribute images to help cover more species. Just send a message to the site administrator.
 TEXT: mod_species_overviewtitle|Overview title|Overview of the species module
+TEXT: mod_species_locsound|Sound bytes|Sound bytes (local)
 TEXT: mod_species_overview|Overview block contents|This is an experiment. It is an attempt to create automatically generated guidebooks for living organisms based on a simple list of species for a group and region of the world. It defaults to Birds of South Africa, but you can scroll down and on the  right you can change it to mammals of South Africa, or check a simple demo if it using plants. Unfortunately, most biologists only share their data via specific websites, so you have to be human to access it. It is time to change this 20th Century mindset, and share data for access whether it is by a human or not.
 TEXT: mod_species_overviewuse|How to use it|To use this module, click the letter corresponding to the Group Common Name (e.g. b for barbets) and then click the species you want to see (the letter A is shown by default). Alternatively, click the group (e.g. Batis) to get a quick pictoral guide to that group, then click the species you want to see in more detail. At the bottom right, click another set of organisms to switch from SA Birds to (say) mammals of SA. The plants:proteaceae is just a test at this stage, but birds and mammals are complete.
