--- a/species/register.conf
+++ b/species/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Species
 MODULE_DESCRIPTION: Manage a database of information about species within a group, for example birds. Store common name, Latin name, a link to one or more free content images from Flickr, as well as imported text from Wikipedia where it exists.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: August 17, 2012, 2:22 pm
-MODULE_VERSION: 0.018
+MODULE_VERSION: 0.019
 MODULE_PATH: species
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -38,6 +38,7 @@ TEXT: mod_species_wikipovrv|Wikipedia overview|Wikipedia overview
 TEXT: mod_species_stub|Explains a stub|This article is a stub on Wikipedia. This means that the information about this species is incomplete. You could use your knowledge and passion for this species to improve upon the Wikipedia article. Simply click the title at the top of this page, and go to the Wikipedia article where you can edit it to improve upon it.
 TEXT: mod_species_eoltitle|Encyclopedia of Life results|Encyclopedia of Life results
 TEXT: mod_species_eolsound|Sound file via EOL|Sounds via EOL
+TEXT: mod_species_eolimg|Images via EOL|Images via EOL
 TEXT: mod_species_eolnosound|EOL has no sound|The Encyclopedia of Life (EOL) has no sound file for [-species-]. If you know of a freely accessible sound recording for this species, you can join EOL and provide a link to the sound file. If you have access to this species, you could record it and donate the recording to EOL.
 TEXT: mod_species_eolnoimg|EOL has no images|The Encyclopedia of Life (EOL) has no image files for [-species-]. You can join EOL and provide a link to a public image file, or you can add CC licensed images to the Encyclopedia of Life group on Flickr.  If you have access to this species, you could photograph it and donate the image to EOL, either directly or via its Flickr group.
 TEXT: mod_species_changegroup|Change organisms|Change organisms
