Added link to sound recorded by, fixed block shows in wrong place

--- a/species/register.conf
+++ b/species/register.conf
@@ -20,6 +20,12 @@ MENU_CATEGORY: User
 // It depends on flickrshow for the API key
 DEPENDS: flickrshow
 
+// Create a directory for caching images and sound files
+CREATE_FOLDER: Yes
+DIRECTORY: imagecache
+DIRECTORY: soundcache
+
+
 // Set the config parameters and their defaults.
 CONFIG: species_findsounds|TRUE|mod_species_findsounds
 TEXT: mod_species_findsounds|Look for sounds|Do you want SPECIES to look for sound clips on the Encyclopedia of Life? If your speices list contains birds, or mammals, it makes sense to look for sound bytes, but if the list contains species, it makes sense to set this parameter to FALSE.
