--- a/mcqtests/register.conf
+++ b/mcqtests/register.conf
@@ -4,7 +4,7 @@ MODULE_STATUS: stable
 MODULE_DESCRIPTION: The MCQ (multiple choice question) Test module allows [-authors-] to set up MCQ tests, define the a period of time when [-readonlys-] will be able to access the test and restrict the test to specific computer labs. The order of questions and answers can be scrambled so that no two [-readonlys-] will get a test with the questions and the answers in the same order.
 MODULE_AUTHORS: Megan Watson, Kevin Cyster, Paul Mungai, Nguni Phakela
 MODULE_RELEASEDATE: 2007 01 01
-MODULE_VERSION: 4.124
+MODULE_VERSION: 4.127
 MODULE_PATH: mcqtests
 MODULE_CATEGORY: assessment
 ISCONTEXTPLUGIN: 1
@@ -14,6 +14,9 @@ ISCONTEXTPLUGIN: 1
 MENU_CATEGORY: assessment
 PAGE: lecturer_assignment
 
+UPDATE_DESCRIPTION: [JOC] Combined the two export types into a single export function. Also made changes to list_test_tpl.php and student_home_tpl.php
+UPDATE_DESCRIPTION: [JOC] Added language items
+UPDATE_DESCRIPTION: [JOC] Added language items
 UPDATE_DESCRIPTION: [JOC] Corrected export functionality by converting double quotes in freeform question type answers to single quotes for compatibility with the csv format
 UPDATE_DESCRIPTION: [JOC] Corrected export functionality by enclosing freeform answers in double quotes
 UPDATE_DESCRIPTION: [JOC] Undid previous change
@@ -528,3 +531,7 @@ TEXT: mod_mcqtests_reqmark|Required Mark Message|Please Enter the default mark f
 TEXT: mod_mcqtests_reqpenalty|Required Phrase Message|Please Enter the penalty for the question
 TEXT: mod_mcqtest_advanced|Phrase advanced tests|Advanced Tests
 TEXT: mod_mcqtests_cleanup|Cleanup data|Perform cleanup of invalid userId's when exporting data
+
+TEXT: mod_mcqtests_na|Not available|n/a
+TEXT: mod_mcqtests_legacynotcompleted|Legacy not completed|Legacy not completed
+TEXT: mod_mcqtests_notcompleted|Not completed|Not completed
