Fix where students were able to see their results before the test was closed.

--- a/mcqtests/register.conf
+++ b/mcqtests/register.conf
@@ -4,7 +4,7 @@ MODULE_STATUS: stable
 MODULE_DESCRIPTION: The MCQ (multiple choice question) Test module allows [-authors-] to set up MCQ tests, define the a period of time when [-readonlys-] will be able to access the test and restrict the test to specific computer labs. The order of questions and answers can be scrambled so that no two [-readonlys-] will get a test with the questions and the answers in the same order.
 MODULE_AUTHORS: Megan Watson, Kevin Cyster, Paul Mungai, Nguni Phakela
 MODULE_RELEASEDATE: 2007 01 01
-MODULE_VERSION: 4.127
+MODULE_VERSION: 4.128
 MODULE_PATH: mcqtests
 MODULE_CATEGORY: assessment
 ISCONTEXTPLUGIN: 1
@@ -14,6 +14,7 @@ ISCONTEXTPLUGIN: 1
 MENU_CATEGORY: assessment
 PAGE: lecturer_assignment
 
+UPDATE_DESCRIPTION: [JOC] Fix where students were able to see their results before the test was closed
 UPDATE_DESCRIPTION: [JOC] Combined the two export types into a single export function. Also made changes to list_test_tpl.php and student_home_tpl.php
 UPDATE_DESCRIPTION: [JOC] Added language items
 UPDATE_DESCRIPTION: [JOC] Added language items
