--- a/mcqtests/register.conf
+++ b/mcqtests/register.conf
@@ -4,7 +4,7 @@ MODULE_STATUS: stable
 MODULE_DESCRIPTION: The MCQ (multiple choice question) Test module allows [-authors-] to set up MCQ tests, define the a period of time when [-readonlys-] will be able to access the test and restrict the test to specific computer labs. The order of questions and answers can be scrambled so that no two [-readonlys-] will get a test with the questions and the answers in the same order.
 MODULE_AUTHORS: Megan Watson, Kevin Cyster, Paul Mungai, Nguni Phakela
 MODULE_RELEASEDATE: 2007 01 01
-MODULE_VERSION: 4.130
+MODULE_VERSION: 4.131
 MODULE_PATH: mcqtests
 MODULE_CATEGORY: assessment
 ISCONTEXTPLUGIN: 1
@@ -14,6 +14,7 @@ ISCONTEXTPLUGIN: 1
 MENU_CATEGORY: assessment
 PAGE: lecturer_assignment
 
+UPDATE_DESCRIPTION: [JOC] Bug fix relating to the marking of freeform type questions in students_ test results
 UPDATE_DESCRIPTION: [JOC] Bug fixes relating to the displaying of the mark for freeform type questions in student_s test results
 UPDATE_DESCRIPTION: [JOC] Bug fix for marking of freeform question types
 UPDATE_DESCRIPTION: [JOC] Fix where students were able to see their results before the test was closed
