--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Register interest
 MODULE_DESCRIPTION: Allows someone to enter name and email address in order to be contacted at sometime in the future about something of interest. For example, register to be notified about the upcoming API release, Lady GooGoo concert, etc.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: November 28, 2012, 8:24 am
-MODULE_VERSION: 0.002
+MODULE_VERSION: 0.003
 MODULE_PATH: registerinterest
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -15,7 +15,7 @@ BLOCK: riform
 
 TABLE: tbl_registerinterest_interested
 
-
+TEXT: mod_registerinterest_title|Register your interest|Register your interest
 TEXT: mod_registerinterest_fullname|Your full name|Tell us your full name
 TEXT: mod_registerinterest_email|Your email|What is the mail address at which you want us to contact you?
 TEXT: mod_registerinterest_confirm|Confirm your email|We don't make you type your email address twice, so please just double check it and click save.
