--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -3,13 +3,14 @@ MODULE_NAME: Register interest
 MODULE_DESCRIPTION: Allows someone to enter name and email address in order to be contacted at sometime in the future about something of interest. For example, register to be notified about the upcoming API release, Lady GooGoo concert, etc.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: November 28, 2012, 8:24 am
-MODULE_VERSION: 0.003
+MODULE_VERSION: 0.004
 MODULE_PATH: registerinterest
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: registerinterest
 MODULE_CATEGORY: registerinterest
+MENU_CATEGORY: admin
 
 BLOCK: riform
 
