Fixed large number of bugs, added two blocks

--- a/faq/register.conf
+++ b/faq/register.conf
@@ -6,7 +6,7 @@ MODULE_NAME: FAQ
 MODULE_DESCRIPTION: The FAQ plugin allows users to create a list of frequently asked questions. Questions and their answers are organised in user-defined categories.
 MODULE_AUTHORS: Jeremy OConnor altered by Stelio Macumbe,David wafula
 MODULE_RELEASEDATE: 2004 07 28
-MODULE_VERSION: 2.613
+MODULE_VERSION: 2.615
 MODULE_PATH: faq
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 1
@@ -23,6 +23,7 @@ PAGE: lecturer_organise||faq
 
 CONFIG: mod_faq_limited_users|0|mod_faq_limited_users
 
+UPDATE_DESCRIPTION: [dwk] Fixed large number of bugs, added two blocks
 UPDATE_DESCRIPTION: [dwk] Cleaned up some cat vomit and added elements for styling
 UPDATE_DESCRIPTION: Updated edit permissions
 UPDATE_DESCRIPTION: Associated tags with contextcode
@@ -43,6 +44,9 @@ TABLE: tbl_faq_categories
 TABLE: tbl_faq_entries
 TABLE: tbl_faq_images
 TABLE: tbl_faq_tags
+
+BLOCK: latestcats
+BLOCK: latestquestions
 
 TEXT: help_faq_about_title|About title|The F.A.Q. module.
 TEXT: help_faq_about|About|The F.A.Q. module contains a list frequently asked questions and their answers, which are further divided into categories.
@@ -77,6 +81,9 @@ TEXT: mod_faq_limited_users|limit users|Allow only users in the Site Admin or Le
 TEXT: mod_faq_access_denied_heading|Access Denied|Access Denied
 TEXT: mod_faq_access_denied_message|You do not currently have access to edit FAQ content. Kindly contact the site administrator for assistance.|You do not currently have access to edit FAQ content. Kindly contact the site administrator for assistance.
 TEXT: mod_faq_tags|Tags|Tags
+TEXT: mod_faq_addedby|Added by|Added by
+TEXT: mod_faq_latestcats|Latest FAQ categories|Latest FAQ categories
+TEXT: mod_faq_latestqq|Latest FAQ questions|Latest FAQ questions
 
 USES: word_question|The word \'Question\'|Question
 USES: word_yes|The word \'Yes\'|Yes
