Added module name to dropdown blocks list

--- a/personalspace/register.conf
+++ b/personalspace/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: My Work Space
 MODULE_DESCRIPTION: Manages the user's personal details.
 MODULE_AUTHORS: Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 06 02
-MODULE_VERSION: 1.009
+MODULE_VERSION: 1.010
 MODULE_PATH: personalspace
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -20,6 +20,7 @@ DEPENDS_CONTEXT: 0
 
 TABLE: tbl_personalspace_blocks
 
+UPDATE_DESCRIPTION: [DWK] Added module name to dropdown blocks list 1.010
 UPDATE_DESCRIPTION: [DWK] Fixed language object not instantiated error 
 UPDATE_DESCRIPTION: [pwando] - fixed bug in personalspace module wrt contentblocks
 UPDATE_DESCRIPTION: [pwando] - Added content blocks
