Display the contex as part of the title if they are in a context

--- a/faq/register.conf
+++ b/faq/register.conf
@@ -6,7 +6,7 @@ MODULE_NAME: FAQ
 MODULE_DESCRIPTION: The FAQ plugin allows users to create a list of frequently asked questions. Questions and their answers are organised in user-defined categories.
 MODULE_AUTHORS: Jeremy OConnor altered by Stelio Macumbe,David wafula
 MODULE_RELEASEDATE: 2004 07 28
-MODULE_VERSION: 2.615
+MODULE_VERSION: 2.616
 MODULE_PATH: faq
 MODULE_ISVISIBLE: 1
 MODULE_HASADMINPAGE: 1
@@ -23,6 +23,7 @@ PAGE: lecturer_organise||faq
 
 CONFIG: mod_faq_limited_users|0|mod_faq_limited_users
 
+UPDATE_DESCRIPTION: [dwk] Display the contex as part of the title if they are in a context 2.616
 UPDATE_DESCRIPTION: [dwk] Fixed large number of bugs, added two blocks
 UPDATE_DESCRIPTION: [dwk] Cleaned up some cat vomit and added elements for styling
 UPDATE_DESCRIPTION: Updated edit permissions
