Fixed block appearance

--- a/personalblocks/register.conf
+++ b/personalblocks/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Personal blocks
 MODULE_DESCRIPTION: Allows the creation of personal blocks for display on sidebar block areas. Requires the blockalicious module to function. Personal blocks allow the addition of web widgets in locations such as a blog.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2008 06 14
-MODULE_VERSION: 0.385
+MODULE_VERSION: 0.386
 MODULE_PATH: personalblocks
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -30,6 +30,7 @@ COMMENT: DEPENDS- blockalicious
 TAGS: blocks|widgets
 MODULE_STATUS: beta
 
+UPDATE_DESCRIPTION: [DWK] Fixed language item and context block displaying in personal 0.386
 UPDATE_DESCRIPTION: [DWK] Fixed filepreview not working
 UPDATE_DESCRIPTION: [DWK] Used language2txt for word context
 UPDATE_DESCRIPTION: [DWK] Rendered context blocks in featureboxes
@@ -70,7 +71,7 @@ TEXT: mod_personalblocks_view|View middle blocks|View middle blocks
 
 TEXT: mod_personalblocks_noleft|Message for when there are no left blocks|You do not have any saved left panel blocks. You can add a left panel block by selecting the edit tab in the personal blocks module.
 TEXT: mod_personalblocks_noright|Message for when there are no right blocks|You do not have any saved right panel blocks. You can add a right panel block by selecting the edit tab in the personal blocks module.
-TEXT: mod_personalblocks_nomiddle|Message for when there are no middle blocks|You do not have any saved middle panel blocks. You can add a left panel block by selecting the edit tab in the personal blocks module.
+TEXT: mod_personalblocks_nomiddle|Message for when there are no middle blocks|You do not have any saved middle panel blocks. You can add a middle panel block by selecting the edit tab in the personal blocks module.
 
 TEXT: mod_personalblocks_contextmiddle|Context middle block|[-CONTEXT-] blocks: middle
 TEXT: mod_personalblocks_contextleft|Context left block|[-CONTEXT-] blocks: left
