--- a/wikiwriter/register.conf
+++ b/wikiwriter/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME:            WikiWriter
 MODULE_DESCRIPTION:     UNDER DEVELOPMENT, DO NOT USE: Wikiwriter takes a collection of webpages and returns a nicely formated PDF Document.
 MODULE_AUTHORS:         Ryan Whitney, ryan@greenlikeme.org
 MODULE_RELEASEDATE:     2006 12 20
-MODULE_VERSION:         0.011
+MODULE_VERSION:         0.012
 MODULE_PATH:            wikiwriter
 MODULE_ISADMIN:         0
 MODULE_ISVISIBLE:       1
@@ -15,4 +15,4 @@ MENU_CATEGORY:          resources
 DIRECTORY:              wikiwriter
 
 CONFIG:                 HTMLDOC_PATH|/usr/local/bin/
-MODULE_STATUS: pre-alpha
+MODULE_STATUS:          DEPRECATED
