added language items

--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Register interest
 MODULE_DESCRIPTION: Allows someone to enter name and email address in order to be contacted at sometime in the future about something of interest. For example, register to be notified about the upcoming API release, Lady GooGoo concert, etc.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: November 28, 2012, 8:24 am
-MODULE_VERSION: 0.006
+MODULE_VERSION: 0.008
 MODULE_PATH: registerinterest
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,6 +12,9 @@ MODULE_LANGTERMS: registerinterest
 MODULE_CATEGORY: registerinterest
 MENU_CATEGORY: admin
 
+UPDATE_DESCRIPTION: Added remove link
+UPDATE_DESCRIPTION: Added language Items
+
 BLOCK: riform
 
 TABLE: tbl_registerinterest_interested
@@ -19,9 +22,15 @@ TABLE: tbl_registerinterest_interested
 TEXT: mod_registerinterest_title|Register your interest|Register your interest
 TEXT: mod_registerinterest_fullname|Your full name|Tell us your full name
 TEXT: mod_registerinterest_email|Your email|What is the email address at which you want us to contact you?
+TEXT: mod_registerinterest_removealert|Message to appear when you remove a person from the list|Are you sure you want to remove this person from the interest list?
 TEXT: mod_registerinterest_confirm|Confirm your email|We don't make you type your email address twice, so please just double check it and click save.
 TEXT: mod_registerinterest_msgsubject|Message subject|Message subject
 TEXT: mod_registerinterest_msglabel|Message to send|Message to send
+TEXT: mod_registerinterest_registeredplp|People who have registered interest|People who have registered interest
+TEXT: mod_registerinterest_invalidfullname|Message to appear if the full name is not entered|Enter your full name
+TEXT: mod_registerinterest_invalidfullname|Message to be displayed if the email address is invlid|Invalid email address
 
 USES: word_save|Save|Save
 USES: word_send|Send|Send
+USES: word_remove|Remove|Remove
+USES: word_update|Update|Update
