Prevent a person from registering morethan once

--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Register interest
 MODULE_DESCRIPTION: Allows someone to enter name and email address in order to be contacted at sometime in the future about something of interest. For example, register to be notified about the upcoming API release, Lady GooGoo concert, etc.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: November 28, 2012, 8:24 am
-MODULE_VERSION: 0.009
+MODULE_VERSION: 0.010
 MODULE_PATH: registerinterest
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,6 +12,8 @@ MODULE_LANGTERMS: registerinterest
 MODULE_CATEGORY: registerinterest
 MENU_CATEGORY: admin
 
+
+UPDATE_DESCRIPTION: Added language Items
 UPDATE_DESCRIPTION: [DWW] Added administrative ability to edit and delete a record
 UPDATE_DESCRIPTION: Added remove link
 UPDATE_DESCRIPTION: Added language Items
@@ -30,8 +32,19 @@ TEXT: mod_registerinterest_msglabel|Message to send|Message to send
 TEXT: mod_registerinterest_registeredplp|People who have registered interest|People who have registered interest
 TEXT: mod_registerinterest_invalidfullname|Message to appear if the full name is not entered|Enter your full name
 TEXT: mod_registerinterest_invalidfullname|Message to be displayed if the email address is invlid|Invalid email address
+TEXT: mod_registerinterest_emptymsg|Message to be displayed if the message body is empty|You cannot send an empty message
+TEXT: mod_registerinterest_noentries|Message to be displayed when there are no names on the list|There are no names on the list
 
 USES: word_save|Save|Save
 USES: word_send|Send|Send
 USES: word_remove|Remove|Remove
 USES: word_update|Update|Update
+USES: word_subject|Subject|Subject
+USES: word_from|From|From
+USES: word_greetings|Greetings|Greetings
+
+USES: phrase_sendmessage|Send message|Send message
+USES: phrase_msgsuccess|Message sent successfully|Message sent successfully
+USES: phrase_messagestatus|Message status|Message status
+USES: phrase_msgerror|Error sending message|Error sending message
+USES: phrase_nosubject|No Subject|No Subject
