Disabled email sending temporarily

--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Register interest
 MODULE_DESCRIPTION: Allows someone to enter name and email address in order to be contacted at sometime in the future about something of interest. For example, register to be notified about the upcoming API release, Lady GooGoo concert, etc.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: November 28, 2012, 8:24 am
-MODULE_VERSION: 0.010
+MODULE_VERSION: 0.011
 MODULE_PATH: registerinterest
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -13,6 +13,7 @@ MODULE_CATEGORY: registerinterest
 MENU_CATEGORY: admin
 
 
+UPDATE_DESCRIPTION: Disabled email sending TEMPORARY
 UPDATE_DESCRIPTION: Added language Items
 UPDATE_DESCRIPTION: [DWW] Added administrative ability to edit and delete a record
 UPDATE_DESCRIPTION: Added remove link
