--- a/socialweb/register.conf
+++ b/socialweb/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Social web
 MODULE_DESCRIPTION: Reusable classes for developers that draw on social web applications, providing things such as Google plus and similar buttons for other sites. There is no end user functionality.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: September 16, 2012, 3:52 pm
-MODULE_VERSION: 0.004
+MODULE_VERSION: 0.005
 MODULE_PATH: socialweb
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
@@ -16,3 +16,6 @@ UPDATE_DESCRIPTION: [dwk] Added ability to store and retrieve Facebook AP ID 0.0
 
 CONFIG: facebook_apid|replaceme|mod_socialweb_fbapid
 TEXT: mod_socialweb_fbapid|Application ID|Facebook application ID for this site
+
+CONFIG: facebook_adminuser|replaceme|mod_socialweb_adminuser
+TEXT: mod_socialweb_adminuser|The administrative user of this Facebook application|The administrative user of this Facebook application
