changed temporary to temporarily

--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -13,7 +13,7 @@ MODULE_CATEGORY: registerinterest
 MENU_CATEGORY: admin
 
 
-UPDATE_DESCRIPTION: Disabled email sending TEMPORARY
+UPDATE_DESCRIPTION: Disabled email sending TEMPORARILY
 UPDATE_DESCRIPTION: Added language Items
 UPDATE_DESCRIPTION: [DWW] Added administrative ability to edit and delete a record
 UPDATE_DESCRIPTION: Added remove link
