Changed module description 1.011

--- a/personalspace/register.conf
+++ b/personalspace/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: personalspace
 MODULE_NAME: My Work Space
-MODULE_DESCRIPTION: Manages the user's personal details.
+MODULE_DESCRIPTION: Provides a blank slate on which you can use Chisimba blocks to build your own private interface.
 MODULE_AUTHORS: Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 06 02
-MODULE_VERSION: 1.010
+MODULE_VERSION: 1.011
 MODULE_PATH: personalspace
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -20,6 +20,7 @@ DEPENDS_CONTEXT: 0
 
 TABLE: tbl_personalspace_blocks
 
+UPDATE_DESCRIPTION: [DWK] Changed module description 1.011
 UPDATE_DESCRIPTION: [DWK] Added module name to dropdown blocks list 1.010
 UPDATE_DESCRIPTION: [DWK] Fixed language object not instantiated error 
 UPDATE_DESCRIPTION: [pwando] - fixed bug in personalspace module wrt contentblocks
