--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Register interest
 MODULE_DESCRIPTION: Allows someone to enter name and email address in order to be contacted at sometime in the future about something of interest. For example, register to be notified about the upcoming API release, Lady GooGoo concert, etc.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: November 28, 2012, 8:24 am
-MODULE_VERSION: 0.012
+MODULE_VERSION: 0.013
 MODULE_PATH: registerinterest
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -13,6 +13,7 @@ MODULE_CATEGORY: registerinterest
 MENU_CATEGORY: admin
 
 
+UPDATE_DESCRIPTION: Added language items and opt-out function
 UPDATE_DESCRIPTION: Added security check to update function
 UPDATE_DESCRIPTION: Disabled email sending TEMPORARILY
 UPDATE_DESCRIPTION: Added language Items
@@ -36,6 +37,9 @@ TEXT: mod_registerinterest_invalidfullname|Message to appear if the full name is
 TEXT: mod_registerinterest_invalidfullname|Message to be displayed if the email address is invlid|Invalid email address
 TEXT: mod_registerinterest_emptymsg|Message to be displayed if the message body is empty|You cannot send an empty message
 TEXT: mod_registerinterest_noentries|Message to be displayed when there are no names on the list|There are no names on the list
+TEXT: mod_registerinterest_optoutmsg|opt out message|if you would like to stop recieving these email, click the below link
+TEXT: mod_registerinterest_optoutconfirm|opt out confirmation message|Please click on the below link if you want to stop recieving email from the list
+TEXT: mod_registerinterest_removemsg|remove message|Remove me from the list
 
 USES: word_save|Save|Save
 USES: word_send|Send|Send
@@ -44,6 +48,7 @@ USES: word_update|Update|Update
 USES: word_subject|Subject|Subject
 USES: word_from|From|From
 USES: word_greetings|Greetings|Greetings
+USES: word_unsubscribe|unsubscribe|Unsubscribe
 
 USES: phrase_sendmessage|Send message|Send message
 USES: phrase_msgsuccess|Message sent successfully|Message sent successfully
