--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Register interest
 MODULE_DESCRIPTION: Allows someone to enter name and email address in order to be contacted at sometime in the future about something of interest. For example, register to be notified about the upcoming API release, Lady GooGoo concert, etc.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: November 28, 2012, 8:24 am
-MODULE_VERSION: 0.013
+MODULE_VERSION: 0.014
 MODULE_PATH: registerinterest
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -13,6 +13,7 @@ MODULE_CATEGORY: registerinterest
 MENU_CATEGORY: admin
 
 
+UPDATE_DESCRIPTION: Fixed opt-out redirection
 UPDATE_DESCRIPTION: Added language items and opt-out function
 UPDATE_DESCRIPTION: Added security check to update function
 UPDATE_DESCRIPTION: Disabled email sending TEMPORARILY
