Added admin ability to delete posts (all)

--- a/wall/register.conf
+++ b/wall/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Wall
 MODULE_DESCRIPTION: A simple wall module that makes use of OEMBED and that tries to look a bit like Facebook's wall
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: 2006 10 17
-MODULE_VERSION: 0.072
+MODULE_VERSION: 0.073
 MODULE_PATH: wall
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -27,6 +27,7 @@ WIDEBLOCK: genericwall
 TABLE: tbl_wall_posts
 TABLE: tbl_wall_comments
 
+UPDATE_DESCRIPTION: [dwk] Added admin ability to delete posts (all)
 UPDATE_DESCRIPTION: [dwk] Fixed delete link for generic wall
 UPDATE_DESCRIPTION: [dwk] login checker handled by the user object instead of a variable
 UPDATE_DESCRIPTION: [dwk] Fixed delete link showing when not logged in
