--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Register interest
 MODULE_DESCRIPTION: Allows someone to enter name and email address in order to be contacted at sometime in the future about something of interest. For example, register to be notified about the upcoming API release, Lady GooGoo concert, etc.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: November 28, 2012, 8:24 am
-MODULE_VERSION: 0.014
+MODULE_VERSION: 0.016
 MODULE_PATH: registerinterest
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -13,6 +13,7 @@ MODULE_CATEGORY: registerinterest
 MENU_CATEGORY: admin
 
 
+UPDATE_DESCRIPTION: Added tables, records and intersts. Added language items
 UPDATE_DESCRIPTION: Fixed opt-out redirection
 UPDATE_DESCRIPTION: Added language items and opt-out function
 UPDATE_DESCRIPTION: Added security check to update function
@@ -24,7 +25,9 @@ UPDATE_DESCRIPTION: Added language Items
 
 BLOCK: riform
 
+TABLE: tbl_registerinterest_records
 TABLE: tbl_registerinterest_interested
+TABLE: tbl_registerinterest
 
 TEXT: mod_registerinterest_title|Register your interest|Register your interest
 TEXT: mod_registerinterest_fullname|Your full name|Tell us your full name
@@ -41,6 +44,7 @@ TEXT: mod_registerinterest_noentries|Message to be displayed when there are no n
 TEXT: mod_registerinterest_optoutmsg|opt out message|if you would like to stop recieving these email, click the below link
 TEXT: mod_registerinterest_optoutconfirm|opt out confirmation message|Please click on the below link if you want to stop recieving email from the list
 TEXT: mod_registerinterest_removemsg|remove message|Remove me from the list
+TEXT: mod_registerinterest_nointerests|No interests message|No interests are available to register for.
 
 USES: word_save|Save|Save
 USES: word_send|Send|Send
@@ -56,3 +60,4 @@ USES: phrase_msgsuccess|Message sent successfully|Message sent successfully
 USES: phrase_messagestatus|Message status|Message status
 USES: phrase_msgerror|Error sending message|Error sending message
 USES: phrase_nosubject|No Subject|No Subject
+USES: phrase_confirm|Confirmation message|Are you sure you want to remove this record?
