added option for automated student importing

--- a/userimport/register.conf
+++ b/userimport/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: User Import
 MODULE_DESCRIPTION: This module implements batch import of new users, using either CSV or XML files, or by webservice to a remote database
 MODULE_AUTHORS: James Scoble
 MODULE_RELEASEDATE: 2005 02 18
-MODULE_VERSION: 1.990
+MODULE_VERSION: 1.991
 MODULE_PATH: userimport
 MODULE_ISADMIN: 1
 MODULE_ISVISIBLE: 1
@@ -27,6 +27,7 @@ CONFIG: emaildomain|0|mod_userimport_emaildomain
 CONFIG: sendemail|1|mod_userimport_sendemail
 CONFIG: set_to_ascii|0|mod_userimport_settoascii
 CONFIG: uwc_data|0|mod_userimport_uwcdata
+CONFIG: autoimport|0|mod_userimport_autoimport
 
 TEXT: mod_userimport_remoteserver|URL for remote web service.|URL for remote web service.
 TEXT: mod_userimport_remoteservice|Second (optional) part of URL for remote web service.|Second (optional) part of URL for remote web service.
@@ -34,6 +35,7 @@ TEXT: mod_userimport_emaildomain|Domain name for email.|Domain name for email.
 TEXT: mod_userimport_sendemail|Send registration email to users?|Send registration email to users?
 TEXT: mod_userimport_settoascii|Send email in ASCII format?|Send email in ASCII format?
 TEXT: mod_userimport_uwcdata|UWC Data|Ignore Name and Surname when checking for existing users
+TEXT: mod_userimport_autoimport|Auto Import Password|Password for Remote Batch Import
 
 PAGE: admin_users
 PAGE: lecturer_users
