Added language items

--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Register interest
 MODULE_DESCRIPTION: Allows someone to enter name and email address in order to be contacted at sometime in the future about something of interest. For example, register to be notified about the upcoming API release, Lady GooGoo concert, etc.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: November 28, 2012, 8:24 am
-MODULE_VERSION: 0.016
+MODULE_VERSION: 0.017
 MODULE_PATH: registerinterest
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -13,6 +13,7 @@ MODULE_CATEGORY: registerinterest
 MENU_CATEGORY: admin
 
 
+UPDATE_DESCRIPTION: Added language items
 UPDATE_DESCRIPTION: Added tables, records and intersts. Added language items
 UPDATE_DESCRIPTION: Fixed opt-out redirection
 UPDATE_DESCRIPTION: Added language items and opt-out function
@@ -45,6 +46,8 @@ TEXT: mod_registerinterest_optoutmsg|opt out message|if you would like to stop r
 TEXT: mod_registerinterest_optoutconfirm|opt out confirmation message|Please click on the below link if you want to stop recieving email from the list
 TEXT: mod_registerinterest_removemsg|remove message|Remove me from the list
 TEXT: mod_registerinterest_nointerests|No interests message|No interests are available to register for.
+TEXT: mod_registerinterest_enterinterest|Enter interest message|Enter interests below.
+TEXT: mod_registerinterest_selectinterest|Select interest message|Select interests below.
 
 USES: word_save|Save|Save
 USES: word_send|Send|Send
