Removed values on registerinterst right block

--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -48,6 +48,7 @@ TEXT: mod_registerinterest_removemsg|remove message|Remove me from the list
 TEXT: mod_registerinterest_nointerests|No interests message|No interests are available to register for.
 TEXT: mod_registerinterest_enterinterest|Enter interest message|Enter interests below.
 TEXT: mod_registerinterest_selectinterest|Select interest message|Select interests below.
+TEXT: mod_registerinterest_registered|List of persons who have registered interest|People who have registered interest
 
 USES: word_save|Save|Save
 USES: word_send|Send|Send
