Removed values on registerinterst right block

--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -65,3 +65,4 @@ USES: phrase_messagestatus|Message status|Message status
 USES: phrase_msgerror|Error sending message|Error sending message
 USES: phrase_nosubject|No Subject|No Subject
 USES: phrase_confirm|Confirmation message|Are you sure you want to remove this record?
+USES: phrase_optoutlink|Opt out link message|Click here to opt-out
