Hard coded template

--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Register interest
 MODULE_DESCRIPTION: Allows someone to enter name and email address in order to be contacted at sometime in the future about something of interest. For example, register to be notified about the upcoming API release, Lady GooGoo concert, etc.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: November 28, 2012, 8:24 am
-MODULE_VERSION: 0.017
+MODULE_VERSION: 0.019
 MODULE_PATH: registerinterest
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -43,12 +43,13 @@ TEXT: mod_registerinterest_invalidfullname|Message to be displayed if the email 
 TEXT: mod_registerinterest_emptymsg|Message to be displayed if the message body is empty|You cannot send an empty message
 TEXT: mod_registerinterest_noentries|Message to be displayed when there are no names on the list|There are no names on the list
 TEXT: mod_registerinterest_optoutmsg|opt out message|if you would like to stop recieving these email, click the below link
-TEXT: mod_registerinterest_optoutconfirm|opt out confirmation message|Please click on the below link if you want to stop recieving email from the list
+TEXT: mod_registerinterest_optoutconfirm|opt out confirmation message|Please click on the below link if you want to stop recieving email from us
 TEXT: mod_registerinterest_removemsg|remove message|Remove me from the list
 TEXT: mod_registerinterest_nointerests|No interests message|No interests are available to register for.
 TEXT: mod_registerinterest_enterinterest|Enter interest message|Enter interests below.
 TEXT: mod_registerinterest_selectinterest|Select interest message|Select interests below.
 TEXT: mod_registerinterest_registered|List of persons who have registered interest|People who have registered interest
+TEXT: mod_registerinterest_messageheader|The header for email message|Hi {username}
 
 USES: word_save|Save|Save
 USES: word_send|Send|Send
