--- a/websearch/register.conf
+++ b/websearch/register.conf
@@ -3,14 +3,14 @@ MODULE_NAME: Websearch
 MODULE_DESCRIPTION: Make smart searches on Google and other websites directly from Chisimba
 MODULE_AUTHORS: Derek Keats, Jameel Sauls
 MODULE_RELEASEDATE: 2005 02 05
-MODULE_VERSION: 0.7
+MODULE_VERSION: 0.701
 MODULE_PATH: websearch
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
 MODULE_HASADMINPAGE: 0
 MENU_CATEGORY:
 DEPENDS: personalspace
-MODULE_STATUS: beta
+MODULE_STATUS: DEPRECATED
 BLOCK: google
 BLOCK: lastsearch
 BLOCK: scholarg
