Marked module deprecated -- added DO NOT INSTALL to the title

--- a/websearch/register.conf
+++ b/websearch/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: websearch
-MODULE_NAME: Websearch
+MODULE_NAME: Websearch __DEPRECATED DO NOT INSTALL___
 MODULE_DESCRIPTION: Make smart searches on Google and other websites directly from Chisimba
 MODULE_AUTHORS: Derek Keats, Jameel Sauls
 MODULE_RELEASEDATE: 2005 02 05
-MODULE_VERSION: 0.701
+MODULE_VERSION: 0.702
 MODULE_PATH: websearch
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 0
