--- a/internals/register.conf
+++ b/internals/register.conf
@@ -17,7 +17,7 @@ TABLE: tbl_leaves
 TABLE: tbl_leaverecords
 
 USES: word_internals_title|Internal affairs|Internal affairs
-USES: word_apply| apply|Apply:
+USES: word_apply| apply|Apply
 USES: word_save|save|Save
 USES: word_reject|reject|Reject
 USES: word_accept|Accept|Accept
