internals initial commit

--- a/internals/register.conf
+++ b/internals/register.conf
@@ -19,7 +19,9 @@ TABLE: tbl_leaverecords
 USES: word_internals_title|Internal affairs|Internal affairs
 USES: word_apply| apply|Apply
 USES: word_save|save|Save
+USES: word_send|send|Send
 USES: word_reject|reject|Reject
+USES: word_approve|approve|Approve
 USES: word_accept|Accept|Accept
 
 USES: phrase_selectleave|select leave type|Select leave type
@@ -29,6 +31,13 @@ USES: phrase_startdate|Start date|Start date:
 USES: phrase_enddate|end date|End Date:
 USES: phrase_enterleavename|enter leave name|Enter leave name:
 USES: phrase_enterdaysdue|enter days due|Enter days due
+USES: phrase_noappleave|no applicable leave|No leave applicable
+USES: phrase_norequests|no pending requests|There are no pending requests
+USES: phrase_notregistered|not registered on the module|You are not registered on the module
+USES: phrase_registerlink|register link text|Click here to register
+USES: phrase_enterenddate|enter end date|enter end date
+USES: phrase_enterstartdate|enter start date|enter start date
+USES: phrase_leavename|enter leave name|Ener leave name:
+USES: phrase_apply|apply for leave|Appl for leave
 
-
-TEXT: mod_internals_noleave|text indicating that there is no applicable leave|No leave applicable
+TEXT: mod_internals_alertmsg|message to be sent to the user when application has been rejected or approved|Hi @username, @newline your request for @numberofdays of @leavename starting from @startdate till @enddate hase been @status by @username. @newline @newline thank you @newline
