Internals first commit

--- a/internals/register.conf
+++ b/internals/register.conf
@@ -38,7 +38,7 @@ USES: phrase_registerlink|register link text|Click here to register
 USES: phrase_enterenddate|enter end date|enter end date
 USES: phrase_enterstartdate|enter start date|enter start date
 USES: phrase_leavename|enter leave name|Ener leave name:
-USES: phrase_apply|apply for leave|Appl for leave
+USES: phrase_apply|apply for leave|Apply for leave
 
 TEXT: mod_internals_alertmsg|message to be sent to the user when application has been rejected or approved|Hi @username, @newline your request for @numberofdays of @leavename starting from @startdate till @enddate hase been @status by @username. @newline @newline thank you @newline
 TEXT: mod_internals_addleave|add leave label value|Add leave type
