--- a/internals/register.conf
+++ b/internals/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Internals
 MODULE_DESCRIPTION: Module to manage internal affairs of an organization.
 MODULE_AUTHORS: Monwabisi Sifumba
 MODULE_RELEASEDATE: March 01, 2013, 07:50 am
-MODULE_VERSION: 0.003
+MODULE_VERSION: 0.004
 MODULE_PATH: internals
 MODULE_ISADMIN: 0
 MODULE_HASADMINPAGE: 0
@@ -16,6 +16,8 @@ TABLE: tbl_requests
 TABLE: tbl_leaves
 TABLE: tbl_leaverecords
 
+UPDATE_DESCRIPTOION: Added language items
+
 USES: word_internals_title|Internal affairs|Internal affairs
 USES: word_apply| apply|Apply
 USES: word_save|save|Save
@@ -23,6 +25,9 @@ USES: word_send|send|Send
 USES: word_reject|reject|Reject
 USES: word_approve|approve|Approve
 USES: word_accept|Accept|Accept
+USES: word_name|Name|Name:
+USES: word_date|Date|Date:
+USES: word_position|Position|Position:
 
 USES: phrase_selectleave|select leave type|Select leave type
 USES: phrase_daysdue|total days due|Total days due
@@ -39,6 +44,11 @@ USES: phrase_enterenddate|enter end date|enter end date
 USES: phrase_enterstartdate|enter start date|enter start date
 USES: phrase_leavename|enter leave name|Enter leave name:
 USES: phrase_apply|apply for leave|Apply for leave
+USES: phrase_formheading|Heading of the application form|Leave Application Form
+USES: phrase_addleavetype|add leave type|Add leave type
+USES: phrase_daysavailable|number of days available label|No. of Days available
+USES: phrase_daystaken|number of days taken label|No. of Days leave taken
+USES: phrase_daysbalance|number of days left label|No. of Days leave balance
 
 TEXT: mod_internals_alertmsg|message to be sent to the user when application has been rejected or approved|Hi @username, @newline your request for @numberofdays of @leavename starting from @startdate till @enddate hase been @status by @username. @newline @newline thank you @newline
-TEXT: mod_internals_addleave|add leave label value|Add leave type
+TEXT: mod_formmessage_internals|message to appear on the form|Please approve absence from work for @numberofdays, from @startdate to @enddate incluseve
