--- a/internals/register.conf
+++ b/internals/register.conf
@@ -49,6 +49,9 @@ USES: phrase_addleavetype|add leave type|Add leave type
 USES: phrase_daysavailable|number of days available label|No. of Days available
 USES: phrase_daystaken|number of days taken label|No. of Days leave taken
 USES: phrase_daysbalance|number of days left label|No. of Days leave balance
+USES: phrase_rejected|Rejected requests| @rejected rejected requests
+USES: phrase_approved|Approved requests| @approved approved requests
+USES: phrase_pending|Pending requests| @pending pending requests
 
 TEXT: mod_internals_alertmsg|message to be sent to the user when application has been rejected or approved|Hi @username, @newline your request for @numberofdays of @leavename starting from @startdate till @enddate hase been @status by @username. @newline @newline thank you @newline
 TEXT: mod_formmessage_internals|message to appear on the form|Please approve absence from work for @numberofdays, from @startdate to @enddate incluseve
