--- a/registerinterest/register.conf
+++ b/registerinterest/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Register interest
 MODULE_DESCRIPTION: Allows someone to enter name and email address in order to be contacted at sometime in the future about something of interest. For example, register to be notified about the upcoming API release, Lady GooGoo concert, etc.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: November 28, 2012, 8:24 am
-MODULE_VERSION: 0.019
+MODULE_VERSION: 0.020
 MODULE_PATH: registerinterest
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -67,3 +67,4 @@ USES: phrase_msgerror|Error sending message|Error sending message
 USES: phrase_nosubject|No Subject|No Subject
 USES: phrase_confirm|Confirmation message|Are you sure you want to remove this record?
 USES: phrase_optoutlink|Opt out link message|Click here to opt-out
+USES: phrase_writemsg|write message|Write message
