--- a/internals/register.conf
+++ b/internals/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Internals
 MODULE_DESCRIPTION: Module to manage internal affairs of an organization.
 MODULE_AUTHORS: Monwabisi Sifumba
 MODULE_RELEASEDATE: March 01, 2013, 07:50 am
-MODULE_VERSION: 0.004
+MODULE_VERSION: 1.005
 MODULE_PATH: internals
 MODULE_ISADMIN: 0
 MODULE_HASADMINPAGE: 0
@@ -12,7 +12,7 @@ MODULE_CATEGORY: internals
 MENU_CATEGORY: user
 
 TABLE: tbl_internals
-TABLE: tbl_requests
+TABLE: tbl_internalrequests
 TABLE: tbl_leaves
 TABLE: tbl_leaverecords
 
