Added module to user menus

--- a/mynotes/register.conf
+++ b/mynotes/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: My Notes
 MODULE_DESCRIPTION: Take notes, organize them by tags, keep them private or share them with your friends, all user, or the world.
 MODULE_AUTHORS: Nguni Phakela
 MODULE_RELEASEDATE: March 16, 2012, 7:33 am
-MODULE_VERSION: 0.018
+MODULE_VERSION: 0.019
 MODULE_PATH: mynotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,6 +12,7 @@ MODULE_LANGTERMS: mynotes
 MODULE_CATEGORY: mynotes
 MODULE_STATUS: beta
 
+UPDATE_DESCRIPTION: [DWK] Added to user menus 0.019
 UPDATE_DESCRIPTION: [DWK] Added module status
 UPDATE_DESCRIPTION: Added language elements [nguni]
 UPDATE DESCRIPTION: Added search results language elements [nguni]
@@ -23,7 +24,10 @@ UPDATE_DESCRIPTION: Added the note taking form [nguni]
 TABLE: tbl_mynotes_text
 TABLE: tbl_mynotes_tags
 
-MENU_CATEGORY: Developer
+MENU_CATEGORY: user
+SIDEMENU: postlogin-1|site
+SIDEMENU: user-2
+
 WIDEBLOCK: mynotesmiddle
 BLOCK: mynotesleft
 BLOCK: mynotesright
