--- a/activitystreamer/register.conf
+++ b/activitystreamer/register.conf
@@ -1,9 +1,9 @@
 MODULE_ID: activitystreamer
 MODULE_NAME: Activity Streamer
-MODULE_DESCRIPTION: Provides a log of activities performed by users on the site. Supports PubSubHubbub and activitystrea.ms
+MODULE_DESCRIPTION: Provides a log of activities performed by users on the site. Supports PubSubHubbub and activitystreams.
 MODULE_AUTHORS: Wesley Nitsckie, Paul Mungai
 MODULE_RELEASEDATE: 2008 08 25
-MODULE_VERSION: 0.043
+MODULE_VERSION: 0.044
 MODULE_PATH: activitystreamer
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -18,6 +18,7 @@ DEPENDS_CONTEXT: 0
 DEPENDS: feed
 DEPENDS: pubsubhubbub
 
+UPDATE_DESCRIPTION: [dwk] Removed . in middle of word in title
 UPDATE_DESCRIPTION: [dwk] Fixed infernal missing language item
 UPDATE_DESCRIPTION: [kdc] Fixed error on passthroughlogin
 UPDATE_DESCRIPTION: Changed module status to beta
