--- a/announcements/register.conf
+++ b/announcements/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Announcements
 MODULE_DESCRIPTION: Enables [-AUTHORS-] to post announcements which can be viewed by all the [-READONLYS-] within a [-CONTEXT-].
 MODULE_AUTHORS: Joel Kimilu, Tohir Solomons, Paul Mungai
 MODULE_RELEASEDATE: 2008 01 25
-MODULE_VERSION: 0.375
+MODULE_VERSION: 0.376
 MODULE_PATH: announcements
 MODULE_ISADMIN: 0
 MODULE_ISLECTURER: 0
@@ -22,6 +22,7 @@ MODULE_STATUS: stable
 
 CONFIG: SEND_ANN_BODY|FALSE|mod_announcement_includeannbody
 
+UPDATE_DESCRIPTION: [JOC] Refactored code. Changed emails to Bcc. 0.376
 UPDATE_DESCRIPTION: [DWK] Added missing language items
 UPDATE_DESCRIPTION: [DWK] Added content dropdown to the announcement view page
 UPDATE_DESCRIPTION: [DWK] Fixed numerous bugs, including repetition in listing announcements
