Fixed bug with blogs not saving blogId correctly for context blogs, added block for context blogs 0.043; Added context blog block 0.042; Added code to allow blog content to be rendered by AJAX 0.040

--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.040
+MODULE_VERSION: 0.043
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,6 +12,8 @@ MODULE_LANGTERMS: simpleblog
 MODULE_CATEGORY: simpleblog
 MODULE_STATUS: stable
 
+UPDATE_DESCRIPTION: [dwk] Fixed bug with blogs not saving blogId correctly for context blogs, added block for context blogs 0.043
+UPDATE_DESCRIPTION: [dwk] Added context blog block 0.042
 UPDATE_DESCRIPTION: [dwk] Added code to allow blog content to be rendered by AJAX 0.040
 UPDATE_DESCRIPTION: [dwk] Removed display of content marked as 'draft' 0.039
 UPDATE_DESCRIPTION: [dwk] Fixed context abstraction on radio button 0.038
@@ -44,6 +46,7 @@ COMMENT: /END  ----------------- THESE ARE FOR USE DURING DEVELOPMENT
 COMMENT: --- Register the blocks that this module provides
 WIDEBLOCK: simpleblogmiddle
 WIDEBLOCK: siteblog
+WIDEBLOCK: contextblog
 BLOCK: addpost
 BLOCK: aboutblog
 BLOCK: aboutsiteblog
