Added some RSS stuff

--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.043
+MODULE_VERSION: 0.048
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,6 +12,9 @@ MODULE_LANGTERMS: simpleblog
 MODULE_CATEGORY: simpleblog
 MODULE_STATUS: stable
 
+UPDATE_DESCRIPTION: [dwk] Added it to the workspace menu 0.048
+UPDATE_DESCRIPTION: [dwk] Added blocks for linking to RSS feed 0.046 and 0.047
+UPDATE_DESCRIPTION: [dwk] Added code for rendering RSS feeds 0.044
 UPDATE_DESCRIPTION: [dwk] Fixed bug with blogs not saving blogId correctly for context blogs, added block for context blogs 0.043
 UPDATE_DESCRIPTION: [dwk] Added context blog block 0.042
 UPDATE_DESCRIPTION: [dwk] Added code to allow blog content to be rendered by AJAX 0.040
@@ -38,8 +41,10 @@ CONTEXT_AWARE: 1
 ISCONTEXTPLUGIN: 1
 DEPENDS_CONTEXT: 0
 
-COMMENT: /BEGIN----------------- THESE ARE FOR USE DURING DEVELOPMENT
 MENU_CATEGORY: User
+SIDEMENU: user-1
+
+COMMENT: /BEGIN----------------- THESE ARE FOR USE DURING DEVELOPMENT
 COMMENT----DEPENDS: demodata
 COMMENT: /END  ----------------- THESE ARE FOR USE DURING DEVELOPMENT
 
@@ -53,6 +58,8 @@ BLOCK: aboutsiteblog
 BLOCK: archives
 BLOCK: tagcloud
 BLOCK: simplesearch
+BLOCK: sitefeed
+BLOCK: userfeed
 
 // Set the config parameters and their defaults.
 CONFIG: simpleblog_numpostdisplay|5|mod_simpleblog_numpostdisplay
@@ -94,6 +101,11 @@ TEXT: mod_simpleblog_home|Blog home|Blog home
 TEXT: mod_simpleblog_viewwall|Blog wall|Blog wall
 TEXT: mod_simpleblog_tagcloud|Tag cloud|Tag cloud
 TEXT: mod_simpleblog_search|Search blogs|Search blogs
+TEXT: mod_simpleblog_sitefeed|Site blog feed|Site blog feed
+TEXT: mod_simpleblog_userfeed|User blog feed|User blog feed
+
+TEXT: mod_simpleblog_nfprivatecontext|[-CONTEXT-] is not public|[-CONTEXT-] is not public
+TEXT: mod_simpleblog_nfprivatecontextdes|Only blogs in open [-CONTEXTS-] can have public feeds|Only blogs in open [-CONTEXTS-] can have public feeds
 
 COMMENT: Help text entries
 TEXT: help_simpleblog_about_title|About SimpleBlog|About SimpleBlog
