Fixed navigation menu

--- a/forum/register.conf
+++ b/forum/register.conf
@@ -150,6 +150,8 @@ TEXT: mod_forum_defaultforumchanged|The default forum has been updated|The defau
 TEXT: mod_forum_explainlocking|Locking a forum will allow ALL users to view existing topics, but not reply or start new topics|Locking a forum will allow ALL users to view existing topics, but not reply or start new topics
 
 TEXT: mod_forum_lockforum|Lock Forum|Lock Forum
+TEXT: mod_forum_topicdoesnotexist|Non existing topic|The topic does not exist
+TEXT: mod_forum_inboxempty|Empty inbox message|Inbox is empty
 
 TEXT: mod_forum_postnewmessage|Instruction to post new message|Post New Message
 TEXT: mod_forum_typeoftopic|label type of topic|Type of Topic
