--- a/simpleblog/register.conf
+++ b/simpleblog/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Simple blog
 MODULE_DESCRIPTION: A simplified version of a blog module that makes use a simplified, dynamic canvas interface allowing users to turn on side blocks using page level blocks. Supports personal blogs, site-level blogs and context-level blogs.
 MODULE_AUTHORS: Derek Keats
 MODULE_RELEASEDATE: January 17, 2011, 1:41 pm
-MODULE_VERSION: 0.048
+MODULE_VERSION: 0.050
 MODULE_PATH: simpleblog
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,6 +12,7 @@ MODULE_LANGTERMS: simpleblog
 MODULE_CATEGORY: simpleblog
 MODULE_STATUS: stable
 
+UPDATE_DESCRIPTION: [dwk] Added language strings for wall posts, added script to activate links like Facebook does if a certain class is used, added return to context when editing context blog 0.050
 UPDATE_DESCRIPTION: [dwk] Added it to the workspace menu 0.048
 UPDATE_DESCRIPTION: [dwk] Added blocks for linking to RSS feed 0.046 and 0.047
 UPDATE_DESCRIPTION: [dwk] Added code for rendering RSS feeds 0.044
@@ -86,8 +87,12 @@ TEXT: mod_simplelblog_noblogyet|No blog yet by the given user|The user has not y
 TEXT: mod_simplelblog_yourfirstblog|Message when you have no blog yet|You have no blog posts. You can create one now. Please take the time to enter a discription of your blog before you make your first post.
 TEXT: mod_simpleblog_blogname|The name of this blog|The name of this blog
 TEXT: mod_simpleblog_notmember|Alert the user that they are not a member of the SimpleBloggers group|You do not have blogging rights. You need to be a member of the group SimpleBloggers to be able to create a blog.
+TEXT: mod_simpleblog_nocommentsyet|No comments yet|No comments yet
 
+TEXT: mod_simpleblog_numcmtssn|This post has [-NUMPOSTS-] comment (singular)|This post has [-NUMPOSTS-] comment
+TEXT: mod_simpleblog_numcmtspl|This post has [-NUMPOSTS-] comments (plural)|This post has [-NUMPOSTS-] comments
 TEXT: mod_simpleblog_posts|Blog posts|Blog posts
+
 TEXT: mod_simpleblog_siteposts|Site posts|Site posts
 TEXT: mod_simpleblog_personal|My personal blog|My personal blog
 TEXT: mod_simpleblog_context|[-CONTEXT-] blog|[-CONTEXT-] blog
