General improvements to mynotes

--- a/mynotes/register.conf
+++ b/mynotes/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: My Notes
 MODULE_DESCRIPTION: Take notes, organize them by tags, keep them private or share them with your friends, all user, or the world.
 MODULE_AUTHORS: Nguni Phakela
 MODULE_RELEASEDATE: March 16, 2012, 7:33 am
-MODULE_VERSION: 0.019
+MODULE_VERSION: 0.021
 MODULE_PATH: mynotes
 MODULE_ISADMIN: 0
 MODULE_ISVISIBLE: 1
@@ -12,6 +12,7 @@ MODULE_LANGTERMS: mynotes
 MODULE_CATEGORY: mynotes
 MODULE_STATUS: beta
 
+UPDATE_DESCRIPTION: [DWK] Added nav block 0.020
 UPDATE_DESCRIPTION: [DWK] Added to user menus 0.019
 UPDATE_DESCRIPTION: [DWK] Added module status
 UPDATE_DESCRIPTION: Added language elements [nguni]
@@ -30,12 +31,12 @@ SIDEMENU: user-2
 
 WIDEBLOCK: mynotesmiddle
 BLOCK: mynotesleft
-BLOCK: mynotesright
+BLOCK: mynotesnav
 
 TEXT: mod_wall_entertext|Instructions to enter text|Enter your message here...
 TEXT: mod_wall_onlytext|Instructions to only insert text|No HTML, only links and text
 TEXT: mod_wall_share|The word share|Share
-TEXT: mod_mynotes_allnotes|The words all notes|My notes
+TEXT: mod_mynotes_allnotes|The words my notes|My notes
 TEXT: mod_mynotes_addnote|The words to add notes|Add a note
 TEXT: mod_mynotes_editnote|The words to edit a note|Edit a note
 TEXT: mod_mynotes_notetitle|The words note title|Title
@@ -54,3 +55,4 @@ TEXT: mod_mynotes_prev|The word previous|Previous
 TEXT: mod_mynotes_next|The word next|Next
 TEXT: mod_mynotes_nonotes|No notes|There are no notes saved.
 TEXT: word_share|The word Share|Share
+TEXT: mod_mynotes_nav|My notes|My notes
