updated with new RTT client

--- a/rtt/register.conf
+++ b/rtt/register.conf
@@ -3,7 +3,7 @@ MODULE_NAME: Realtime Communication Tools
 MODULE_DESCRIPTION: Module supporting real time communications.
 MODULE_AUTHORS: Warren Windvogel, David Wafula
 MODULE_RELEASEDATE: 2010 09 14
-MODULE_VERSION: 1.1005
+MODULE_VERSION: 1.1006
 MODULE_PATH: rtt
 MODULE_ISADMIN: 0
 MODULE_HASADMINPAGE: 0
@@ -14,6 +14,7 @@ CONTEXT_AWARE: 1
 ISCONTEXTPLUGIN:1
 DEPENDS_CONTEXT: 1
 DEPENDS: filemanager
+DEPENDS: userparamsadmin
 
 UPDATE_DESCRIPTION: Updated the rtt client
 UPDATE_DESCRIPTION: Added configs for freeswitch
