Putting it right

--- a/gallery/register.conf
+++ b/gallery/register.conf
@@ -11,6 +11,8 @@ MODULE_HASADMINPAGE: 0
 MODULE_LANGTERMS: gallery
 MODULE_CATEGORY: gallery
 MENU_CATEGORY: user
+MODULE_STATUS: stable
+
 TAGS: gallery|photo|audio|video
 
 CONFIG: MOD_GALLERY_URI|http://localhost/gallery/|mod_gallery_location
